<resources>
    <string name="app_name">The Daily Scoop</string>
    <string name="article_reader">Article Reader</string>
    <string name="web_client_id">883659810444-j4mcal2i17lni940icaiv07lankc103k.apps.googleusercontent.com</string>
    <string name="title_activity_categories">categories</string>
    <string name="signin">Sign In</string>
    <string name="signup">Sign Up</string>
    <string name="title_technology">Tech</string>
    <string name="title_sports">Sports</string>
    <string name="title_politics">Politics</string>
    <string name="title_entertainment">Entertainment</string>
    <string name="hamburger_home">Home</string>
    <string name="hamburger_profile">Profile</string>
    <string name="hamburger_live">LIVE</string>
    <string name="hamburger_discover">Discover</string>
    <string name="hamburger_partition">Extra</string>
    <string name="hamburger_settings">Settings</string>
    <string name="hamburger_about_us">About Us</string>
    <string name="hamburger_hello">Hello User</string>
    <string name="hamburger_menu_open">Open Menu</string>
    <string name="hamburger_menu_close">Close Menu</string>
    <string name="share">Share</string>
    <string name="tech_description">The latest news app in the market.The fastest news app in the town</string>
    <string name="tech_title">The new App</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="full_article">Full Article</string>

    <!-- LiveNews -->
    <string name="abcnews">ABC News</string>
    <string name="cnnnews">CNN News 18</string>
    <string name="newsnation">News Nation</string>
    <string name="aajtak">Aaj Tak</string>
    <string name="abplive">ABP News</string>
    <string name="aljazeera">Al-Jazeera</string>
    <string name="cbsnews">CBS News</string>
    <string name="indiatv">India TV</string>
    <string name="indiatoday">India Today</string>
    <string name="linustv">Linus Media</string>
    <string name="nasa">NASA</string>
    <string name="republictv">Republic News</string>
    <string name="skynews">Sky News</string>
    <string name="tailosivetv">Tailosive Media</string>
    <string name="timesow">Times Now</string>
    <string name="zoomtv">Zoom TV</string>
    <string name="twittv">Twit TV</string>

    <!--Discover Section-->
    <string name="verge">The Verge</string>
    <string name="ign">IGN</string>
    <string name="bloomberg">Bloomberg</string>
    <string name="buzzfeed">BuzzFeed</string>
    <string name="engadget">Engadget</string>
    <string name="ent_weekly">Entertainment Weekly</string>
    <string name="huffpost">The Huffing Post</string>
    <string name="mashable">Mashable</string>
    <string name="mtv">MTV News</string>
    <string name="natgeo">National Geographic</string>
    <string name="nytimes">New York Times</string>
    <string name="polygon">Polygon</string>
    <string name="thehindu">The Hindu</string>
    <string name="time">TIME</string>
    <string name="toi">The Times of India</string>
    <string name="wired">Wired</string>
    <string name="wsj">The Wall Street Journal</string>

    <string name="india">India</string>
    <string name="usa">USA</string>
    <string name="uk">United Kingdom</string>
    <string name="aus">Australia</string>
    <string name="nz">New Zealand</string>
    <string name="canada">Canada</string>
    <string name="world">World</string>

    <!--pre defined-->
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_bottom_navbar">Bottom_navbar</string>
    <string name="title_activity_main_hamburger">Article Reader</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_hamburger_menu">Latest News</string>


    <!-- Button text -->
    <string name="btn_logout_from_google">Logout from Google</string>
    <string name="btn_revoke_access">Revoke Access</string>
    <string name="loading">Loading</string>
</resources>

