<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single"> <!--this is used to select only one item from all the items in this group-->
        `
        <item
            android:id="@+id/hamburger_home"
            android:icon="@drawable/ic_hamburger_home"
            android:title="@string/title_home" />

        <item
            android:id="@+id/hamburger_profile"
            android:icon="@drawable/ic_hamburger_profile"
            android:title="@string/hamburger_profile" />
        <item
            android:id="@+id/hamburger_live"
            android:icon="@drawable/ic_hamburger_live"
            android:title="@string/hamburger_live" />
        <item
            android:id="@+id/hamburger_discover"
            android:icon="@drawable/ic_hamburger_discover"
            android:title="@string/hamburger_discover" />
    </group>

    <item android:title="@string/hamburger_partition">
        <menu>
            <group android:checkableBehavior="single">

                <item
                    android:id="@+id/hamburger_settings"
                    android:icon="@drawable/ic_hamburger_settings"
                    android:title="@string/hamburger_settings" />
                <item
                    android:id="@+id/hamburger_about_us"
                    android:icon="@drawable/ic_hamburger_about_us"
                    android:title="@string/hamburger_about_us" />

            </group>
        </menu>
    </item>

</menu>
