<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <android.support.v7.widget.CardView
                android:id="@+id/abcnews"
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:layout_gravity="center"
                android:layout_margin="10dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="118dp"
                    android:layout_gravity="center"
                    android:src="@drawable/abcnewsusa" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:layout_gravity="bottom"
                    android:text="@string/abcnews"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textColor="@color/colorPrimaryDark" />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/bloomberg"
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:layout_gravity="center"
                android:layout_margin="10dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="118dp"
                    android:layout_gravity="center"
                    android:src="@drawable/bloomberg" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:layout_gravity="bottom"
                    android:text="@string/bloomberg"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textColor="@color/colorPrimaryDark" />
            </android.support.v7.widget.CardView>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <android.support.v7.widget.CardView
                android:id="@+id/buzzfeed"
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:layout_gravity="center"
                android:layout_margin="10dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="118dp"
                    android:layout_gravity="center"
                    android:src="@drawable/buzzfeed" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:layout_gravity="bottom"
                    android:text="@string/buzzfeed"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textColor="@color/colorPrimaryDark" />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/engadget"
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:layout_gravity="center"
                android:layout_margin="10dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="118dp"
                    android:layout_gravity="center"
                    android:src="@drawable/engadget" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:layout_gravity="bottom"
                    android:text="@string/engadget"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textColor="@color/colorPrimaryDark" />
            </android.support.v7.widget.CardView>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <android.support.v7.widget.CardView
                android:id="@+id/ent_weekly"
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:layout_gravity="center"
                android:layout_margin="10dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="118dp"
                    android:layout_gravity="center"
                    android:src="@drawable/entertainmentweekly" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:layout_gravity="bottom"
                    android:text="@string/ent_weekly"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textColor="@color/colorPrimaryDark" />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/huffpost"
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:layout_gravity="center"
                android:layout_margin="10dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="118dp"
                    android:layout_gravity="center"
                    android:src="@drawable/huffpos" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:layout_gravity="bottom"
                    android:text="@string/huffpost"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textColor="@color/colorPrimaryDark" />
            </android.support.v7.widget.CardView>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <android.support.v7.widget.CardView
                android:id="@+id/ign"
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:layout_gravity="center"
                android:layout_margin="10dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="118dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ign" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:layout_gravity="bottom"
                    android:text="@string/ign"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textColor="@color/colorPrimaryDark" />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/mtv"
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:layout_gravity="center"
                android:layout_margin="10dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="118dp"
                    android:layout_gravity="center"
                    android:src="@drawable/mtv" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:layout_gravity="bottom"
                    android:text="@string/mtv"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textColor="@color/colorPrimaryDark" />
            </android.support.v7.widget.CardView>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <android.support.v7.widget.CardView
                android:id="@+id/natgeo"
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:layout_gravity="center"
                android:layout_margin="10dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/natgeo" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:layout_gravity="bottom"
                    android:text="@string/natgeo"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textColor="@color/colorPrimaryDark" />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/mashable"
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:layout_gravity="center"
                android:layout_margin="10dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="118dp"
                    android:layout_gravity="center"
                    android:src="@drawable/mashable" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:layout_gravity="bottom"
                    android:text="@string/mashable"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textColor="@color/colorPrimaryDark" />
            </android.support.v7.widget.CardView>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <android.support.v7.widget.CardView
                android:id="@+id/newyorktimes"
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:layout_gravity="center"
                android:layout_margin="10dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="118dp"
                    android:layout_gravity="center"
                    android:src="@drawable/newyorktimes" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:layout_gravity="bottom"
                    android:text="@string/nytimes"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textColor="@color/colorPrimaryDark" />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/polygon"
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:layout_gravity="center"
                android:layout_margin="10dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="118dp"
                    android:layout_gravity="center"
                    android:src="@drawable/polygon" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:layout_gravity="bottom"
                    android:text="@string/polygon"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textColor="@color/colorPrimaryDark" />
            </android.support.v7.widget.CardView>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <android.support.v7.widget.CardView
                android:id="@+id/thehindu"
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:layout_gravity="center"
                android:layout_margin="10dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="118dp"
                    android:layout_gravity="center"
                    android:src="@drawable/thehindu" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:layout_gravity="bottom"
                    android:text="@string/thehindu"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textColor="@color/colorPrimaryDark" />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/time"
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:layout_gravity="center"
                android:layout_margin="10dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="118dp"
                    android:layout_gravity="center"
                    android:src="@drawable/time" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:layout_gravity="bottom"
                    android:text="@string/time"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textColor="@color/colorPrimaryDark" />
            </android.support.v7.widget.CardView>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <android.support.v7.widget.CardView
                android:id="@+id/toi"
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:layout_gravity="center"
                android:layout_margin="10dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="118dp"
                    android:layout_gravity="center"
                    android:src="@drawable/toi" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:layout_gravity="bottom"
                    android:text="@string/toi"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textColor="@color/colorPrimaryDark" />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/verge"
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:layout_gravity="center"
                android:layout_margin="10dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="118dp"
                    android:layout_gravity="center"
                    android:src="@drawable/verge" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:layout_gravity="bottom"
                    android:text="@string/verge"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textColor="@color/colorPrimaryDark" />
            </android.support.v7.widget.CardView>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <android.support.v7.widget.CardView
                android:id="@+id/wired"
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:layout_gravity="center"
                android:layout_margin="10dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="118dp"
                    android:layout_gravity="center"
                    android:src="@drawable/wired" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:layout_gravity="bottom"
                    android:text="@string/wired"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textColor="@color/colorPrimaryDark" />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/wsj"
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:layout_gravity="center"
                android:layout_margin="10dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="118dp"
                    android:layout_gravity="center"
                    android:src="@drawable/wsj" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:layout_gravity="bottom"
                    android:text="@string/wsj"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textColor="@color/colorPrimaryDark" />
            </android.support.v7.widget.CardView>


        </LinearLayout>

    </LinearLayout>


</ScrollView>